# meshcom

./: .gitignore  AGENTS.md  CMakeLists.txt  DESIGN.md  README.md  REVIEW.md  partitions.csv  sdkconfig.defaults
docs/: ARCHITECTURE.md
main/: CMakeLists.txt  audio_pipe.c  audio_pipe.h  board.h  bt_hfp.c  bt_hfp.h  espnow_comm.c  espnow_comm.h  espnow_frag.c  group_mgr.c  group_mgr.h  main.c  pairing.c  pairing.h  ui.c  ui.h
test/host/: CMakeLists.txt
test/host/esp_stubs/: esp_err.h  esp_log.h  esp_random.h  esp_timer.h  nvs.h  nvs_flash.h  nvs_mock.c
test/host/esp_stubs/freertos/: FreeRTOS.h  stream_buffer.h  task.h  timers.h
test/host/main/: CMakeLists.txt  mocks.c  mocks.h  test_audio_pipe.c  test_bt_hfp_buffer.c  test_fragmentation.c  test_group_mgr.c  test_main.c  test_pairing.c
